fonts and beautification

--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div>
-    <h1 id="main_title">Title of the Page</h1>
+    <h1 id="main_title">Website</h1>
     <div id='submenu'>
             <nav >
                 <a id="submenu_entries" , href="./index.html">Home</a>
