FLASK and TRANSFORMERS SUPPORT

--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -27,7 +27,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas eius molestiae voluptatum aut, ducimus quaerat consequuntur sequi provident obcaecati mollitia vel tempore? Neque alias a aperiam praesentium consequatur cumque earum.</p>
 </body>
 <form>
-    <input ,type="text", placeholder="Enter The URL">
+    <input type="text" placeholder="Enter The URL">
     <button>Check</button>
 </form>
 </html>
