fixed broken links

--- a/amazon_sentiment/WebSite/base.html
+++ b/amazon_sentiment/WebSite/base.html
@@ -16,9 +16,9 @@
     <h1 id="main_title">Website</h1>
     <div id='submenu'>
             <nav >
-                <a id="submenu_entries" , href="./index.html">Home</a>
-                <a id="submenu_entries" , href="./index.html">Source Code</a>
-                <a id="submenu_entries" , href="./index.html">Contact </a>
+                <a id="submenu_entries" , href="{{url_for('home')}}">Home</a>
+                <a id="submenu_entries" , href="{{url_for('home')}}">Source Code</a>
+                <a id="submenu_entries" , href="{{url_for('home')}}">Contact </a>
             </nav>       
     </div>
 </div>
